Update IMS project with latest changes - refactor components, remove CSS files, add new features